# supypowers

./: .gitignore  LICENSE  README.md  project.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: dates.py  exponents.py  misc.py  strings.py
src/supypowers/: cli.py  util.py  uv_exec.py  uv_script_metadata.py
tests/: test_cli.py
