[project]
name = "supypowers"
version = "0.1.0"
description = "Run self-contained uv Python scripts as callable, schema-documented 'superpowers'."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Andre", email = "" }]
keywords = ["uv", "cli", "pydantic", "llm", "tools", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ergodic-ai/supypowers"
Repository = "https://github.com/ergodic-ai/supypowers"

[project.scripts]
supypowers = "supypowers.cli:app"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/supypowers"]

[tool.hatch.build]
exclude = [
  ".env",
  "**/.env",
]

